# django-htmx-view

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
example/: .gitignore  db.sqlite3  pyproject.toml
example/example/: settings.py  urls.py
example/todo/: models.py  urls.py  views.py
example/todo/migrations/: 0001_initial.py
example/todo/templates/todo/: todo.html  todo_item.html
htmx_view/: __init__.py  mixins.py  utils.py
